# run-tests-in-aws

./: .gitignore  Dockerfile  README.md  buildspec-docker.yml  buildspec.yml  pyproject.toml
tests/: example_test.py
