[project]
name = "run-tests-in-aws"
version = "0.1.0"
description = "Run tests in AWS"
authors = [{ name = "Petar Petrov", email = "unit_1@abv.bg" }]

dependencies = [
    "playwright==1.44.0",
    "pytest==8.2.2",
    "pytest-playwright==0.5.0",
    "pytest-html==4.1.1"
]

[tool.pytest.ini_options]
addopts = "-v --html=report.html --self-contained-html"